--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,11 @@ name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12"
 dependencies = [
     "django>=6.0.2",
+    "django-storages[s3]>=1.14.6",
+    "pillow>=12.1.1",
+    "psycopg[binary]>=3.3.3",
+    "python-decouple>=3.8",
 ]
